--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,46 +2,56 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ricardo.soms">
 
-
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Soms"
-        android:requestLegacyExternalStorage="true">
+        android:theme="@style/Theme.Soms">
+        <activity
+            android:name=".menuSecundario"
+            android:exported="false" />
+
         <activity
             android:name=".inventarioRFID"
             android:exported="false" />
+
         <activity
             android:name=".inventario"
-            android:exported="false" />
-        <activity
-            android:name=".menuPrincipal"
-            android:exported="true" >
+            android:exported="true">
 
 
         </activity>
+
         <activity
-            android:name=".login"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".menuPrincipal"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+        </activity>
+        <activity
+            android:name=".login"
+            android:exported="true" >
 
         </activity>
+
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
