--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,22 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Soms">
         <activity
-            android:name=".menuSecundario"
+            android:name=".activacion"
             android:exported="false" />
-
         <activity
-            android:name=".inventarioRFID"
-            android:exported="false" />
-
-        <activity
-            android:name=".inventario"
-            android:exported="true">
-
-
-        </activity>
-
-        <activity
-            android:name=".menuPrincipal"
+            android:name=".splash"
             android:exported="true">
 
             <intent-filter>
@@ -41,22 +29,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-
+        </activity>
+        <activity
+            android:name=".menuSecundario"
+            android:exported="false" />
+        <activity
+            android:name=".inventarioRFID"
+            android:exported="false" />
+        <activity
+            android:name=".inventario"
+            android:exported="true" />
+        <activity
+            android:name=".menuPrincipal"
+            android:exported="true">
 
         </activity>
         <activity
             android:name=".login"
-            android:exported="true" >
-
-        </activity>
-
-
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
