--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Soms">
         <activity
-            android:name=".activacion"
-            android:exported="false" />
-        <activity
-            android:name=".splash"
-            android:exported="true">
+            android:name=".localizar"
+            android:exported="true" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +27,12 @@
             </intent-filter>
 
         </activity>
+        <activity
+            android:name=".activacion"
+            android:exported="false" />
+        <activity
+            android:name=".splash"
+            android:exported="true"></activity>
         <activity
             android:name=".menuSecundario"
             android:exported="false" />
@@ -41,15 +44,15 @@
             android:exported="true" />
         <activity
             android:name=".menuPrincipal"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".login"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
